--- a/index.html
+++ b/index.html
@@ -18,41 +18,40 @@
         <h2>Places I've Been And Want To Share</h2>
     </header>
     <nav>
-        <div>
-            <ul>
-                <li><a href="#">Home</a></li>
+        <div class="nav-left">
+            <ul class="page-links">
+                <li><a href="#" class="active">Home</a></li>
                 <li><a href="#recent-blogs">Recent Blogs</a></li>
                 <li><a href="#news-about">About</a></li>
             </ul>
         </div>
-        <ul>
-            <li><a href="https://www.twitter.com" target="_blank">Twitter</a></li>
-            <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
-            <li><a href="https://www.github.com/Patrick-s-lewis89" target="_blank">GitHub</a></li>
-        </ul>
-        <div>
-
+        <div class="nav-right">
+            <ul class="social-links">
+                <li><a href="https://www.twitter.com" target="_blank">Twitter</a></li>
+                <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
+                <li><a href="https://www.github.com/Patrick-s-lewis89" target="_blank">GitHub</a></li>
+            </ul>
         </div>
     </nav>
-    <figure>
+    <figure class="big-image">
         <img src="images/backlit-clouds-dark-831x200.jpg" alt="Remarkable Place">
         <figcaption>Remarkable Place</figcaption>
     </figure>
 
     <main>
         <!--recent blog-->
-        <section id="recent-blogs">
+        <section id="recent-blogs" class="table">
             <h3>Recent Blogs</h3>
-            <div>
-                <div><img src="images/hudson-river-valley.jpg" alt="Hudson River">
+            <div class="row">
+                <div class="col"><img src="images/hudson-river-valley.jpg" alt="Hudson River" class="wrapped">
                     <p>This is the Hudson River Valley in New York. Vinyl humblebrag tumeric neutra selfies photo booth waistcoat kinfolk prism poke banh mi. Selvage gastropub flannel tumblr air plant coloring book, distillery keytar asymmetrical truffaut
                         echo park semiotics vinyl.</p>
                 </div>
-                <div><img src="images/fort-point-100x100.jpg" alt="Fort Point">
+                <div class="col"><img src="images/fort-point-100x100.jpg" alt="Fort Point" class="wrapped">
                     <p>Fort Point in San Francisco is a historic site. Vinyl humblebrag tumeric neutra selfies photo booth waistcoat kinfolk prism poke banh mi. Selvage gastropub flannel tumblr air plant coloring book, distillery keytar asymmetrical truffaut
                         echo park semiotics vinyl.</p>
                 </div>
-                <div><img src="images/prince-william-forest.jpg" alt="Prince William Forest">
+                <div class="col"><img src="images/prince-william-forest.jpg" alt="Prince William Forest" class="wrapped">
                     <p>Prince William Forest is the located in Washington DC. Vinyl humblebrag tumeric neutra selfies photo booth waistcoat kinfolk prism poke banh mi. Selvage gastropub flannel tumblr air plant coloring book, distillery keytar asymmetrical
                         truffaut echo park semiotics vinyl.</p>
                 </div>
@@ -60,10 +59,10 @@
         </section>
 
         <!--about-->
-        <section id="news-about">
+        <section id="news-about" class="table">
             <h3>About</h3>
-            <div>
-                <div>
+            <div class="row">
+                <div class="col">
                     <h4>News</h4>
                     <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls
                         like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never
@@ -71,18 +70,18 @@
                         I throw myself down among the tall grass by the trickling stream; and, as I lie close to the earth, a thousand unknown plants are noticed by me: when I hear the buzz of the little world among the stalks, and grow familiar with
                         the countless indescribable forms of the insects and flies, then I feel the presence of the Almighty, who formed us in his own image, and the breath.</p>
                 </div>
-                <div>
+                <div class="col">
                     <h4>About</h4>
                     <p>We are interested in providing information that inspires and enhances your travel experiences.</p>
-                    <div><button>Click button to find out more</button></div>
+                    <div class="cta"><button class="cta-button">Click button to find out more</button></div>
                 </div>
             </div>
         </section>
 
     </main>
     <footer>
-        <div>Copyright &copy; 2019-20</div>
-        <div>Patrick Lewis</div>
+        <div class="footer-left">Copyright &copy; 2019-20</div>
+        <div class="footer-right">Patrick Lewis</div>
     </footer>
 
 
